# llm_sandbox

./: .gitignore  main.py  pyproject.toml  trainer_api_cpu.py  trainer_api_gpu.py
06_the_tokenizers_library/: 03_fast_tokenizers_in_the_qa_pipeline.py  04.normalization_and_pretokenization.py  07_unigram_tokenization.py  08_1_building_a_tokenizer_block_by_block_wordpiece_bert.py
08_classical_nlp_tasks/: 05.Summarization.py
09_sharing_demos/: 01_building_your_first_demo.py  02.4_Generator_Tonow_Muzycznych_Mathematical Synthesizer.py  02.5_Transkrypcja_Audio_na_Tekst_Speech_to_Text_AI.py  04.01_Hugging_Face_and_Gradio_Integration_Demo.py  06.04_Dynamic_UI_Real_time_Property_Updates.py
10_the_datasets_library/: dataset_smiliarty_search_FAISS.py
11_fine_tune_large_language_models/: 02.0_SFT_train.py  02.1_SFT_trained_model_test.py  04.01_LoRA__Low_Rank_Adaptation.py
12_build_reasoning_models/: 02_Implementing_GRPO_in_TRL.py
a_full_training_loop_with_pytorch/: a_full_training_loop_with_pytorch.py
classical_nlp_tasks/: 01_01_token_classification_.py  01_token_classification.py  03_fine_tuning_a_masked_language_model.py  04.Translation.py  07.question_answering.py
dataset/: dataset_creating_your_own_datases_comments.py
demos/: 02.1_Analizator_Sentymentu_Hugging_Face.py  02.2_Aplikacja_ASR_Automatic Speech Recognition).py  02.3_Audio_Reverser.py  03.1_Sharing_demos_with_others_Polski_Transkrypter_AI_Whisper.py  03.3_Sharing_dmoes_with_others_Klasyfikator_Szkicow_Sketch_Recognition_AI.py  05.01_Advanced_Interface_features.py
fine_tune_large_language_models/: 01_chat_templates.py  03.01_Supervised_Fine_Tuning.py
fine_tuning_a_model_with_the_trainer_api/: fine_tuning_a_model_with_the_trainer_api.py
the_datasets_library/: dataset_creating_your_own_dataset.py
the_tokenizers_library/: 01_training_a_specialized_code_tokenizer.py  06_wordpiece_tokenization.py  (+9 more)
(+29 files in other folders)
