[project]
name = "transformers-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
  "transformers[sentencepiece] == 4.57.3",
  "datasets == 4.4.2",
  "torch == 2.9.1",
  "pillow == 12.0.0",
  "evaluate == 0.4.6",
  "accelerate >= 0.35.0",  # Added this for the Trainer API          # Ensuring we avoid the yanked version
  "numpy < 2.4.0",
  "scipy>=1.17.0",
  "scikit-learn>=1.8.0",
]
